# iMOD

./: CMakeLists.txt  README.md  USGS Software User Rights Notice.txt  gpl.txt
MODFLOW/: CMakeLists.txt  ReadMe.txt
MODFLOW/DRIVER/: CMakeLists.txt  driver.F90  driver_module.f90  metaswap_comp.FOR  mozart_comp.f90  transol_comp.FOR
MODFLOW/DRIVER_BMI/: CMakeLists.txt  driver.F90  driver_bmi.F90  driver_bmi_module.f90  driver_module.f90
MODFLOW/MF2005/: CMakeLists.txt  doxyfile_IMOD  gwf2ani3.f  gwf2bas7.f  gwf2bas7mod.f  gwf2bcf7.f  gwf2chd7.f  gwf2drn7.f  gwf2drt7.f  gwf2dxc1.f90  gwf2dxc1mod.f90  gwf2evt7.f  gwf2gag7.f  gwf2ghb7.f  gwf2hfb7.f  gwf2huf7.f  gwf2hydmod7.f  gwf2ins1.f  gwf2lak7.f  gwf2lpf7.f  gwf2met1.f  gwf2met1mod.f  gwf2mnw17.f  gwf2mnw27.f  gwf2pwt3.f  gwf2rch7.f  gwf2riv7.f  gwf2scr7.f  gwf2sfr7.f  gwf2str7.f  gwf2sub7.f  gwf2uzf1.f  gwf2wel7.f  gwfsfrmodule.f  gwfuzfmodule.f  imod_isg.f90  imod_isg_ifvdl.f90  imod_isg_par.f90  imod_pest.F90  imod_tseries.f90  (+34 more)
MODFLOW/TESTBANK/: 1206764-000-BGS-0013-v1-m-iMOD tests.docx  testbank_out_test_all_MODFLOW_V3_00_00.txt  testbank_out_test_all_MODFLOW_V3_00_01.txt  testbank_out_test_all_MODFLOW_V3_00_02.txt  testbank_out_test_all_modflow_comp_svn943.txt
MODFLOW/TESTBANK/TESTDATA/: imodflow_all.run  imodflow_ani.run  imodflow_chd.run  imodflow_drn.run  imodflow_evt.run  imodflow_ghb.run  imodflow_hfb.run  imodflow_isg.run  imodflow_olf.run  imodflow_rch.run  imodflow_riv.run  imodflow_unc.run  imodflow_wel.run
MODFLOW/VS2008/: driver.sln
MODFLOW/VS2008/Driver/: Driver.vfproj
MODFLOW/VS2008/iMOD/: iMOD.vfproj
MODFLOW/VS2008/mf2005/: mf2005.vfproj
MODFLOW/VS2010/: driver.sln
MODFLOW/VS2010/Driver/: Driver.vfproj
MODFLOW/VS2010/Driver_BMI/: Driver_BMI.vfproj
MODFLOW/VS2010/iMOD/: iMOD.vfproj
MODFLOW/VS2010/mf2005/: mf2005.vfproj
MODFLOW/iMODUTL/: CMakeLists.txt  imod_idf_lib.f90  imod_idf_mod.f90  imod_idf_par.f90  imod_pest_main.f90  imod_pest_mod.f90  imod_tseries.f90  imod_utl.f90  pks7mpi.f  pks7mpimod.f  pks7mpimodms.f  pks7mpims.f  pks7mpiutl.f  pks7mpiwrp.f  pks_imod_utl.f90  rf2mf_mod.f90  rf2mf_mod_conv.f90  rf2mf_prg.f90  rf2mf_read.f90  rf2mf_utl.f90  rf2ms.f90  timing.f90
TUTORIALS/TUT1_Map_Display/: Borehole.ipf  NAWO_TCC.IDF  wsrl.bmpw
TUTORIALS/TUT1_Map_Display/Observation/: B31C0159001.txt  B31C0191002.txt  B31C0296001.txt  B31C0305001.txt  B31C0320001.txt  B31D0050001.txt  B31D0050002.txt  B31D0061001.txt  B31D0062001.txt  B31D0122002.txt  B31D0125001.txt  B31D0134001.txt  B31D0134002.txt  B31D0163001.txt  B31D0165001.txt  B31D0199001.txt  B31D0200001.txt  B31D0204001.txt  B31D0205001.txt
TUTORIALS/TUT3_Map_Analyse/: boreholes.dlf
TUTORIALS/TUT3_Map_Analyse/HEAD/: head_19900214_l1.idf  head_19900628_l1.idf  head_19910114_l1.idf  head_19910414_l1.idf  head_19910814_l1.idf  head_19910828_l1.idf  head_19911014_l1.idf  head_19911114_l1.idf  head_19911128_l1.idf  head_19911228_l1.idf  head_19920214_l1.idf  head_19920428_l1.idf  head_19920814_l1.idf  head_19921114_l1.idf  head_19921214_l1.idf  head_19930414_l1.idf  head_19930628_l1.idf  head_19930814_l1.idf  head_19940314_l1.idf  head_19940728_l1.idf  head_19940928_l1.idf  head_19950114_l1.idf  head_19950628_l1.idf  head_19961028_l1.idf  head_19970214_l1.idf  head_19970514_l1.idf  head_19970528_l1.idf  head_19970714_l1.idf  head_19970928_l1.idf  head_19980228_l1.idf  head_19980428_l1.idf  head_19980514_l1.idf  head_19980714_l1.idf  head_19980914_l1.idf  head_19981014_l1.idf  head_19981114_l1.idf  head_19990328_l1.idf  head_19990814_l1.idf  head_19990828_l1.idf  head_19991128_l1.idf  (+10 more)
TUTORIALS/TUT3_Map_Analyse/Observation/: ts_4.txt
TUTORIALS/TUT3_Map_Analyse/SubsoilSystem/: TOP_SDL2_M.IDF  TOP_SDL4_M.IDF
TUTORIALS/TUT4_Initial_Modeling/: island.pngw  surface_level.idf
TUTORIALS/TUT5_Solid_Building/: B2.TXT  B4.TXT  B5.TXT  B6.TXT  B7.TXT  BOREHOLES.IPF  ISLAND.PRJ
TUTORIALS/TUT6_Model_Simulation/: TUT6_MODEL.RUN
TUTORIALS/TUT6_Model_Simulation/RIV/: RIV_BOT_L2.IDF  RIV_COND_L1.IDF
TUTORIALS/TUT6_Model_Simulation/VCW/: VCW_L1.IDF  VCW_L3.IDF
TUTORIALS/TUT7_Scenario_Tool/: MEAN_WINTER.RUN  MeasurementA.csv  SCENTOOL.INI
TUTORIALS/TUT7_Scenario_Tool/topbottom/: bot8.IDF
UTL/: CMakeLists.txt  utl.f90
iMOD/: ReadMe.txt
iMOD/CUR/: 2DMAP.cur  CURSORCIRCLE.cur  CURSORIDFVALUE.cur  CURSORIR.CUR  CURSORLINE.cur  CURSORMOVE.cur  CURSORNETWORK.cur  CURSORPIPET.CUR  CURSORPOINT.cur  CURSORPOINTMIN.CUR  CURSORPOINTPLUS.CUR  CURSORPOLYGON.cur  CURSORPROFILE.cur  CURSORRECTANGLE.cur  CURSORZOOMRECTANGLE.cur  DISTANCE.CUR  DRAWMIN.CUR  DRAWPLUS.CUR  MOVELEFTRIGHT.cur  MOVENESW.CUR  MOVENWSE.CUR  MOVEUPDOWN.CUR  addnode.cur  delnode.cur  hand.cur  handgrep.cur  nocursor.cur  tag.cur
iMOD/SRC/: bmpvar.f90  colours.f90  datevar.f90  doxyfile_IMOD  imod_mod.f90  imodconfig_x32d.f90  imodconfig_x32r.f90  imodconfig_x64d.f90  imodconfig_x64r.f90  imodvar.f90  modplot.f90  resource.f90  resource.rc  resource.res
iMOD/SRC/imod_3d/: imod_3d.f90  imod_3d_display.f90  imod_3d_engine.f90  imod_3d_par.f90  imod_3d_process.f90  imod_3d_query.f90  imod_3d_select.f90  imod_3d_settings.f90  imod_3d_utl.f90  mod_3d_query_par.f90
iMOD/SRC/imod_ahnfilter/: imod_ahnfilter.f90  imod_ahnfilter_par.f90
iMOD/SRC/imod_asc2idf/: imod_asc2idf.f90  imod_asc2idf_hfb.f90  imod_asc2idf_par.f90  imod_asc2idf_utl.f90
iMOD/SRC/imod_batch/: imod_aggregate.f90  imod_aggregate_par.f90  imod_batch.f90  imod_batch_flumy.f90  imod_batch_main.f90  imod_batch_par.f90  imod_batch_utl.f90  imod_createizone.f90  imod_drainsurface.f90
iMOD/SRC/imod_bivar/: imod_bivar.f90  imod_bivar_main.f90  imod_kriging.f90
iMOD/SRC/imod_corrkd/: imod_corrkd.f90  imod_corrkd_par.f90
iMOD/SRC/imod_create/: imod_create_utl.f90  imod_creategen.f90  imod_createidf.f90  imod_createidf_par.f90  imod_createipf.f90  imod_createisg.f90
iMOD/SRC/imod_cus/: imod_cus.f90  imod_cus_par.f90
iMOD/SRC/imod_demo/: imod_demo.f90  imod_demo_par.f90
iMOD/SRC/imod_dino/: imod_devwel.f90  imod_devwel_par.f90  imod_dino_ipf.f90  (+1 more)
iMOD/VS2017/: iMOD.sln  iMOD_DFLOWFM.sln
(+15007 files in other folders)
